# game-mods

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.bat  build.sh
xnya_console_enabler/: Cargo.toml
xnya_console_enabler/src/: main.rs
xnya_modloader/: Cargo.toml
xnya_modloader/src/: lib.rs
xnya_modloader_gen/: Cargo.toml  build.rs
xnya_modloader_gen/src/: main.rs
xnya_modloader_template/: .gitignore  Cargo.toml  build.rs  exports.def
xnya_modloader_template/src/: jumps.S  lib.rs  load_original_functions.txt  original_function_names.txt  original_library_name.txt
xnya_rallytrophy_cryptutil/: Cargo.toml  build.rs
xnya_rallytrophy_cryptutil/src/: lib.rs
xnya_retrodemo_cryptutil/: Cargo.toml  build.rs
xnya_retrodemo_cryptutil/src/: lib.rs
xnya_utils/: Cargo.toml
xnya_utils/src/: configs.rs  lib.rs  toml_comments.rs
xnya_utils/src/configs/: xnya_modloader.rs  xnya_rallytrophy_cryptutil.rs  xnya_retrodemo_cryptutil.rs
xnya_utils_derive/: Cargo.toml
xnya_utils_derive/src/: lib.rs
