[package]
name = "xnya_modloader"
version = "0.1.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/game-mods/"
homepage = "https://github.com/xNyaDev/game-mods/"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.10.1"
glob = "0.3.1"
libloading = "0.8.1"
log = "0.4.20"
xnya_utils = { path = "../xnya_utils" }

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation"
]

[build-dependencies]
tauri-winres = "0.1.1"
vergen = { version = "8.2.6", features = ["build", "git", "gitoxide"] }
xnya_utils = { path = "../xnya_utils" }

[package.metadata.tauri-winres]
OriginalFilename = "xnya_modloader.dll"
ProductName = "xnya_modloader"
LegalCopyright = "Licensed under MIT or Apache-2.0, xNyaDev 2023"
FileDescription = "https://github.com/xNyaDev/game-mods/"
