[package]
name = "xnya_rallytrophy_cryptutil"
version = "0.1.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/game-mods/"
homepage = "https://github.com/xNyaDev/game-mods/"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bfstool = { default-features = false, git = "https://github.com/xNyaDev/bfstool.git", features = ["keys"] }
serde = { version = "1.0.164", features = ["derive"] }
toml = "0.7.4"
windows = { version = "0.48.0", features = ["Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
xnya_utils = { path = "../xnya_utils" }