[package]
name = "xnya_rallytrophy_cryptutil"
version = "0.1.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/game-mods/"
homepage = "https://github.com/xNyaDev/game-mods/"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bfstool = { default-features = false, git = "https://github.com/xNyaDev/bfstool.git", features = ["keys"] }
windows = { version = "0.51.1", features = ["Win32_System_SystemServices", "Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
xnya_utils = { path = "../xnya_utils" }

[build-dependencies]
xnya_utils = { path = "../xnya_utils" }
tauri-winres = "0.1.1"

[package.metadata.tauri-winres]
OriginalFilename = "xnya_rallytrophy_cryptutil.dll"
ProductName = "xnya_rallytrophy_cryptutil"
LegalCopyright = "Licensed under MIT or Apache-2.0, xNyaDev 2023"
FileDescription = "https://github.com/xNyaDev/game-mods/"