[package]
name = "xnya_utils"
version = "0.1.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/game-mods/"
homepage = "https://github.com/xNyaDev/game-mods/"
publish = false

[dependencies]
documented = "0.3.0"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
toml_edit = "0.22.9"