[package]
name = "xnya_utils_derive"
version = "0.1.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/game-mods/"
homepage = "https://github.com/xNyaDev/game-mods/"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.69"
